@@ -155,8 +155,9 @@ public class MoveFileAction extends AbstractAction {
                         else
                             flEntry.setLink(newFile.getCanonicalPath());
                         eEditor.updateField(editor);
-                        JOptionPane.showMessageDialog(frame, Globals.lang("File moved"),
-                                Globals.lang("Move/Rename file"), JOptionPane.INFORMATION_MESSAGE);
+                        //JOptionPane.showMessageDialog(frame, Globals.lang("File moved"),
+                        //        Globals.lang("Move/Rename file"), JOptionPane.INFORMATION_MESSAGE);
+                        frame.output(Globals.lang("File moved"));
                     } else {
                         JOptionPane.showMessageDialog(frame, Globals.lang("Move file failed"),
                                 Globals.lang("Move/Rename file"), JOptionPane.ERROR_MESSAGE);
