@@ -1,4 +1,5 @@
 [master branch]
+    - Replaced notification dialog after moving/renaming linked file by status message.
     - Replaced dialog warnings about empty/duplicate key in entry editor by status line messages,
       to prevent lockup if Save button is pressed directly.
     - Replaced window icon with 48x48 image.
